--- a/index.html
+++ b/index.html
@@ -17,3 +17,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
+<link rel="stylesheet" href="styles.css">
+<script src="script.js" defer></script>
